--- a/css/about.css
+++ b/css/about.css
@@ -173,3 +173,8 @@ span{
     background-color:  rgb(255, 255, 255) ;
     border-radius: 100%;
 }
+
+.perfilFoto{
+    height: 900px;
+    width: 900px;
+}
