--- a/css/style.css
+++ b/css/style.css
@@ -283,3 +283,214 @@ color: blueviolet;
       width: 0;
     }
   }
+
+
+
+  @media screen and (max-width: 778px){
+    
+.header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 10%;
+  background-color: rgba(44, 17, 69, 0.7);
+  backdrop-filter: blur(1rem);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+}
+
+.logo{
+position: relative;
+  font-size: 10px;
+  color: #ededed;
+  text-decoration: none;
+  font-weight: 200 ;
+
+  
+}
+
+.logo::before{
+content: '';
+position: absolute;
+top: 0;
+right: 0;
+width: 100%;
+height: 100%;
+background:  rgba(44, 17, 69, 0.437);
+animation: showRight 1s ease forwards ;
+animation-delay: .4s;
+}
+
+.perfilFoto{
+height: 400px;
+width: 300px;
+margin-right: -100px;
+}
+
+
+
+.navbar a{
+ 
+  align-items: center;
+  text-decoration: none;
+  color: aliceblue;
+  gap: 20px;
+  font-size: 9px;
+  font-weight: 500;
+ 
+}
+
+.navbar a:hover{
+color: blueviolet;
+}
+
+.home{
+ 
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  padding: 0 10%;
+  margin-left: -20px;
+}
+
+.home-content{
+
+  max-width: 600px;
+  margin-top: 200px;
+  
+
+}
+
+.home-content h1{
+
+font-size: 20px;
+font-weight: 700;
+line-height: 1.2;
+}
+
+.home-content h1::before{
+content: '';
+position: absolute;
+top: 0;
+right: 0;
+width: 100%;
+height: 100%;
+background:  rgb(0, 0, 0);
+animation: showRight 1s ease forwards ;
+animation-delay: .1s;
+}
+
+.home-content p{
+  font-size: 16px;
+ margin: 20px 0 40px;
+}
+
+.home-content h3{
+  font-size:12px;
+  font-weight: 700;
+  color: blueviolet;
+
+}
+
+
+.btn-box{
+
+    display: flex;
+   
+}
+.btn-box::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background:  rgba(0, 0, 0, 0.437);
+  animation: showRight 1s ease forwards ;
+  animation-delay: .1.9s;
+}
+
+
+.btn-box a {
+
+   
+   justify-content: center;
+   background: #b65fdb;
+   border: 2px solid #b65fdb;
+    border-radius: 8px;
+    font-size: 6px;
+    color:black ;
+    text-decoration: none;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-left: -30px;
+    
+}
+
+
+
+.btn-box a {
+    --border-color: linear-gradient(-45deg, #ffae00, #7e03aa, #00fffb);
+    --border-width: .125em;
+    --curve-size: .5em;
+    --blur: 6px;
+    --bg: #080312;
+    --color: #afffff;
+    color: var(--color);
+      /* use position: relative; so that BG is only for .btn */
+    position: relative;
+    isolation: isolate;
+    display: inline-grid;
+    place-content: center;
+    padding: .5em 1.5em;
+    font-size: 9px;
+    border: 0;
+    text-transform: uppercase;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, .6);
+    clip-path: polygon(
+              /* Top-left */
+              0% var(--curve-size),
+  
+              var(--curve-size) 0,
+              /* top-right */
+              100% 0,
+              100% calc(100% - var(--curve-size)),
+  
+              /* bottom-right 1 */
+              calc(100% - var(--curve-size)) 100%,
+              /* bottom-right 2 */
+              0 100%);
+    transition: color 250ms;
+  }
+  
+  .btn-box a::after,
+  .btn-box a::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+  }
+  
+  .btn-box a::before {
+    background: var(--border-color);
+    background-size: 300% 300%;
+    animation: move-bg7234 5s ease infinite;
+    z-index: -2;
+  }
+
+
+  
+.home-content .btn-box{
+  width: 345px;
+  height: 59px;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-left: -20px;
+
+  
+
+
+}
+  }
